external-projects/sui-prover/crates/sui-prover/tests/snapshots/print-ghost.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/print-ghost.move:17:5
   │
17 │     ensures(ghost::global<u64, bool>() != true);
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/print-ghost.move:13: foo_spec
   =         ghost<u64> = true
   =     at tests/inputs/print-ghost.move:17: foo_spec
